update boid example